--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,53 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+p {
+  font-family: 'Open Sans',
+  sans-serif;
+}
+
+
+.brand-text-color-1 {
+  color: rgb(255, 0, 64);
+}
+.brand-text-color-2 {
+  color: rgb(255, 72, 0);
+}
+.brand-text-color-3 {
+  color: rgb(255, 166, 0);
+}
+.brand-text-color-4 {
+  color: rgb(0, 228, 216);
+  box-shadow: 2px black;
+}
+
+.brand-background-color-1 {
+  background-color: rgb(0, 255, 200);
+}
+.brand-background-color-2 {
+  background-color: rgb(33, 206, 236);
+}
+.brand-background-color-3 {
+  background-color: rgb(255, 115, 0);
+}
+.brand-background-color-4 {
+  background-color: rgb(255, 0, 55);
+}
+
+.product-cart{
+  width: 100px;
+  background-color: #fdad00;
+  padding: 15px 10px;
+  position: fixed;
+  top: 50%;
+  z-index: 1000;
+}
+
+/* font-family: 'Noto Sans',
+sans-serif;
+font-family: 'Open Sans',
+sans-serif;
+font-family: 'Roboto',
+sans-serif; */
