--- a/src/pages/Login/Login/Login.css
+++ b/src/pages/Login/Login/Login.css
@@ -1,26 +1,34 @@
 .login-page {
-    background: url('../../../images/login-bg.jpg');
+    background: url('https://c4.wallpaperflare.com/wallpaper/397/165/91/5bf5201a15928-wallpaper-preview.jpg');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+    height: 100vh;
+    padding-top: 100px;
 }
-
-.form-overlay {
-    background: linear-gradient(#00000070, #0b2b0bc4);
-    width: 100%;
-    height: 100%;
-}
-
 
 .login-form-container {
-    width: 500px;
-    background: linear-gradient(#89ffd25e, #72ffd54d);
+    width: 300px;
+    background-color: #fff;
     color: white;
-    border-radius: 10px;
-    padding: 10px;
-    transition: all linear .3s;
 }
 
-.login-form-container:hover {
-    box-shadow: 1px 1px 30px #87ff91;
+.login-form-head {
+    width: 100%;
+    padding: 20px 0px;
+    font-size: 20px;
+    text-transform: uppercase;
+    background: linear-gradient(to right, #380964, #ca164f);
+}
+
+.google-signIn {
+    border: 2px solid #ca164f !important;
+    font-size: 20px;
+    color: rgba(0, 0, 0, 0.623);
+    font-weight: 400;
+}
+
+.google-icon {
+    width: 24px;
+    height: 24px;
 }
