--- a/src/pages/Login/Register/Register.css
+++ b/src/pages/Login/Register/Register.css
@@ -1,26 +1,26 @@
 .register-page {
-    background: url('../../../images/register.jpg');
+    background: url('https://www.teahub.io/photos/full/154-1545179_mac-os-catalina.jpg');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+    height: 100vh;
+    padding-top: 100px;
 }
-
-.register-overlay {
-    background: linear-gradient(#000000e5, #000000ad);
-    width: 100%;
-    height: 100%;
-}
-
 
 .register-form-container {
-    width: 500px;
-    background: linear-gradient(#4ed19fbe, #72ffd54d);
+    width: 300px;
+    background-color: #fff;
     color: white;
-    border-radius: 10px;
-    padding: 10px;
-    transition: all linear .3s;
 }
 
-.register-form-container:hover {
-    box-shadow: 1px 1px 30px #59dce6;
+.login-form-head {
+    width: 100%;
+    padding: 20px 0px;
+    font-size: 20px;
+    text-transform: uppercase;
+    background: linear-gradient(to right, #380964, #ca164f);
+}
+
+.submit-button{
+    background: linear-gradient(to right, #ca164f, #380964);
 }
