--- a/src/pages/Home/OfferProducts/OfferProducts.css
+++ b/src/pages/Home/OfferProducts/OfferProducts.css
@@ -35,6 +35,7 @@
 .product-button,
 .buy-now {
     border: none;
+    width: 120px;
     padding: 5px 15px;
     border-radius: 5px;
     margin-top: 10px;
