--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@ p {
 
 
 .brand-text-color-1 {
-  color: rgb(255, 0, 64);
+  color: rgb(255, 0, 64) !important;
 }
 .brand-text-color-2 {
   color: rgb(255, 72, 0);
